[package]
name = "bevy_marching_cubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.8"
bevy_prototype_lyon = "0.6"
bevy-inspector-egui = "0.12"
fastrand = "1.8.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras.git" }
bytemuck = "1.12.1"
